INIT-4 Added bootstrap.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/users-control
-spring.datasource.username=test
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/users-control}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:test}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 server.port=5000
