--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>users-control</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <dbcp-version>1.4</dbcp-version>
@@ -17,7 +17,6 @@
     </properties>
 
     <parent>
-        <!-- Parent pom providing dependency and plugin management for applications built with Maven -->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.4.RELEASE</version>
@@ -86,17 +85,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
         </dependency>
-        <!-- Не обязательно, нужна для подключения статического CSS от bootstrap и теста статических ресурсов -->
-        <!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
             <version>4.5.0</version>
         </dependency>
-        <!--<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>-->
         <!-- Servlet API 4.0 for tomcat 9 -->
         <dependency>
             <groupId>javax.servlet</groupId>
